--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "firebase": "^11.6.0",
+    "highcharts": "^12.2.0",
+    "highcharts-react-official": "^3.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0"
